0.5.1 projects list: overflow issue fix

--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -14,9 +14,12 @@
     width: 400px;
     border-radius: 3px;
     background: #fff;
-    max-height: 100%;
     min-height: 200px;
     position: relative;
+    max-height: calc(90vh - 110px);
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
 }
 .modal-body h2 {
     margin: 0 0 1.5rem 0;
